# QuantAI

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MASTER_PLAN.md  PHASE_2_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REFACTORING.md  SCALABILITY.md  WEB_INTERFACE.md  ask_ai.py  broad_plan.md  cli.py  index_documents.py  purpose.txt  pyproject.toml  query_knowledge.py  requirements.txt  run.py
ai_agent/reasoner/: __init__.py  embedding_providers.py  llm_providers.py  rag_pipeline.py
ai_agent/tools/: base.py  trading_tools.py
api/: __init__.py  main.py
api/static/: index.html
backtesting/: README.md  __init__.py  engine.py  metrics.py  strategy_loader.py  visualization.py
configs/strategies/: advanced_universe_example.yaml  example_btc_strategy.yaml  example_eth_strategy.yaml  universe_example.yaml
docs/: AI_RESEARCH_AGENT.md  DEVELOPMENT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PRODUCTION_REQUIREMENTS.md  SESSION_PROGRESS_SUMMARY.md  UNIVERSE_IMPLEMENTATION_SUMMARY.md  UNIVERSE_SYSTEM.md
docs/plans/: IMPLEMENTATION_SUMMARY.md  PHASE_2B_MASTER_PLAN.md  module_1_event_system.md  module_2_exchange_connectors.md  module_4_order_management.md
examples/: README.md  arbitrage_strategy.py  backtest_example.py  binance_example.py  demo_research_agent.py  event_system_example.py  mean_reversion_strategy.py  momentum_strategy.py  multi_strategy_example.py  oms_example.py  pnl_recorder_example.py  portfolio_example.py  simulation_example.py  test_backtesting.py  universe_strategy_example.py
knowledge_engine/: __init__.py  knowledge_engine.py
knowledge_engine/graph/: knowledge_graph.py
knowledge_engine/ingest/: __init__.py  document_processor.py  knowledge_extractor.py
knowledge_engine/retrieval/: __init__.py  embeddings.py  rag_pipeline.py  semantic_search.py  vector_store.py
plans/: module_1_events.md  module_2_market_data.md  module_3_oms.md  module_4_portfolio.md  module_5_execution.md  module_6_strategies.md  module_7_simulation.md  phase_2a_rag_tools.md
research/: README.md
research/agent/: __init__.py  agent_factory.py
research/data/: __init__.py  binance_provider.py  feature_engineer.py  interface.py  pattern_detector.py
research/knowledge/: __init__.py  integrated_retriever.py  interface.py  memory_graph.py
sample_data/documents/: pairs_trading_guide.txt  quantitative_trading_basics.txt
scripts/: download_binance_data.sh  fetch_market_data.py  generate_realistic_data.py  manual_agent_session.py  run_agent_on_data.py
shared/config/: settings.py
shared/models/: base.py
shared/utils/: cache.py  url_fetcher.py
strategies/: btc_mean_reversion.py
tests/: README.md  test_queries.py  test_tools.py  test_universe.py  test_universe_basic.py
trading/analytics/: __init__.py  analyzer.py  metrics.py  realtime.py  reporter.py
trading/backtest/: __init__.py  engine.py
trading/coordination/: __init__.py  allocator.py  coordinator.py  monitor.py
trading/events/: __init__.py  base.py  bus.py  filters.py  market_data.py  order.py  position.py
trading/exchanges/: __init__.py  base.py  binance.py  bybit.py  matching.py  okx.py  rate_limiter.py  simulated.py  slippage.py  websocket.py
trading/logging/: __init__.py  event_logger.py  storage.py
trading/oms/: __init__.py  manager.py  risk.py  router.py
(+30 files in other folders)
