[tool.poetry]
name = "quantai"
version = "0.1.0"
description = "AI-Human Collaborative Quant Research Platform"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "knowledge_engine" },
    { include = "backtesting" },
    { include = "ai_agent" },
    { include = "shared" },
    { include = "api" }
]

[tool.poetry.dependencies]
python = "^3.11"
# Core
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"

# AI & LLM
openai = "^1.6.0"
anthropic = "^0.8.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
llama-index = "^0.9.0"

# Vector & Knowledge
chromadb = "^0.4.18"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"

# Graph Database
neo4j = "^5.14.0"

# Database
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"

# Document Processing
pymupdf = "^1.23.8"
pdfplumber = "^0.10.3"
pypdf2 = "^3.0.1"
python-docx = "^1.1.0"
beautifulsoup4 = "^4.12.2"
markdownify = "^0.11.6"

# Data & Backtesting
pandas = "^2.1.4"
numpy = "^1.26.2"
vectorbt = "^0.26.0"
yfinance = "^0.2.33"
alpaca-py = "^0.13.0"
ccxt = "^4.1.88"

# Visualization
plotly = "^5.18.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"

# API & Web
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
websockets = "^12.0"
httpx = "^0.26.0"
aiohttp = "^3.9.1"
requests = "^2.31.0"

# Task Queue & Caching
celery = "^5.3.4"
redis = "^5.0.1"
hiredis = "^2.2.3"

# Utilities
python-dateutil = "^2.8.2"
pytz = "^2023.3"
tqdm = "^4.66.1"
tenacity = "^8.2.3"
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.7.1"
ipython = "^8.18.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
